--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
                 <h1>Hello, I'm <strong>Yusuf Hilman Hawari</strong></h1>
                 <p>Full Stack Developer</p>
                 <div>
-                    <button class="about-me-btn">About Me</button>
+                    <a href="#about-me">
+                        <button class="about-me-btn">About Me</button>
+                    </a>
                 </div>
             </div>
         </div>
@@ -37,12 +39,12 @@
         </nav>
         <div id="about-me" class="about-me-cont">
             <h2>About Me</h2>
-            <img src="./anton-darius-H1ZUlh1lC7Q-unsplash.jpg">
+            <img src="./Yusuf Hilman Hawari.jpg">
             <div class="sosmed">
-                <a href="#">G+</a>
-                <a href="#">Instagram</a>
-                <a href="#">Whatsapp</a>
-                <a href="#">Linkedin</a>
+                <a href="#"><img src="./g+.png"></a>
+                <a href="#"><img src="./ig.png" alt=""></a>
+                <a href="#"><img src="./wa.png" alt=""></a>
+                <a href="#"><img src="./in.png" alt=""></a>
             </div>
             <div class="about-content">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus praesentium sapiente fugiat consectetur cum itaque alias nostrum nemo architecto labore est, dolorum reiciendis necessitatibus et nobis doloribus, laboriosam error quod!</p>
@@ -75,6 +77,31 @@
                     <div class="skill-ket">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, facilis! Suscipit sunt itaque consequatur! Inventore similique harum tempore quis nostrum! Quis suscipit exercitationem officiis accusamus possimus natus ad, asperiores aliquam!</p>
                     </div>
+                </div>
+            </div>
+        </div>
+        <div>
+            <h2>PORTFOLIO</h2>
+        </div>
+        <div>
+            <h2>BLOG</h2>
+        </div>
+        <div id="contact" class="contact-cont">
+            <div>
+                <h2>CONTACT</h2>
+            </div>
+            <div>
+                <div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quo voluptas esse eligendi nemo quisquam, inventore, sequi illo dignissimos cum optio blanditiis nisi ipsum itaque commodi necessitatibus ea ullam obcaecati.</p>
+                    <img src="" alt="">
+                    <p></p>
+                    <a href="#"></a>
+                </div>
+                <div>
+                    <input type="input nama">
+                    <input type="input nama">
+                    <input type="input nama">
+                    <input type="input nama">
                 </div>
             </div>
         </div>
